# simplekv

./: .clang-format  CMakeLists.txt  README.md  simplekv.cpp  simplekv.h
cmake/: basic.cmake  ide.cmake  utils.cmake
include/simplekv/: version.h
src/: simplekv.cpp
test/: CMakeLists.txt  basic_test.cpp
tests/: CMakeLists.txt  test_basic.cpp
